force-app/main/default/objects/Operation__c/Operation__c.object-meta.xml
<CustomObject>
    <label>Opération</label>
    <nameField>
        <label>Nom de l&apos;opération</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opérations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>