force-app/main/default/objects/Operation__c/fields/Budget_Honoraires__c.field-meta.xml
<CustomField>
    <fullName>Budget_Honoraires__c</fullName>
    <label>Budget Honoraires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>