force-app/main/default/objects/Operation__c/fields/Budget_Travaux__c.field-meta.xml
<CustomField>
    <fullName>Budget_Travaux__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Budget Travaux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>