force-app/main/default/objects/Operation__c/fields/CDG_Base_Com__c.field-meta.xml
<CustomField>
    <fullName>CDG_Base_Com__c</fullName>
    <label>CDG Reprise Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>