force-app/main/default/objects/Operation__c/fields/Code_postal__c.field-meta.xml
<CustomField>
    <fullName>Code_postal__c</fullName>
    <label>Code postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>