force-app/main/default/objects/Operation__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opérations</relationshipLabel>
    <relationshipName>Projets</relationshipName>
    <type>Lookup</type>
</CustomField>