force-app/main/default/objects/Operation__c/fields/Compte_reprise__c.field-meta.xml
<CustomField>
    <fullName>Compte_reprise__c</fullName>
    <inlineHelpText>Valeur du champ &quot;Client&quot; repris de Lotus Notes</inlineHelpText>
    <label>Compte Reprise Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>