force-app/main/default/objects/Operation__c/fields/Concurrents__c.field-meta.xml
<CustomField>
    <fullName>Concurrents__c</fullName>
    <label>Concurrents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>