force-app/main/default/objects/Operation__c/fields/D_partement_Vide__c.field-meta.xml
<CustomField>
    <fullName>D_partement_Vide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Département Vide</label>
    <type>Checkbox</type>
</CustomField>