force-app/main/default/objects/Operation__c/fields/Date_previsionnelle_de_candidature__c.field-meta.xml
<CustomField>
    <fullName>Date_previsionnelle_de_candidature__c</fullName>
    <label>Date prévisionnelle de candidature</label>
    <type>Date</type>
</CustomField>