force-app/main/default/objects/Operation__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Département</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pays__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1	Ain</fullName>
            </value>
            <value>
                <fullName>2	Aisne</fullName>
            </value>
            <value>
                <fullName>3	Allier</fullName>
            </value>
            <value>
                <fullName>4	Alpes de Haute Provence</fullName>
            </value>
            <value>
                <fullName>5	Hautes-Alpes</fullName>
            </value>
            <value>
                <fullName>6	Alpes-Maritimes</fullName>
            </value>
            <value>
                <fullName>7	Ardèche</fullName>
            </value>
            <value>
                <fullName>8	Ardennes</fullName>
            </value>
            <value>
                <fullName>9	Ariège</fullName>
            </value>
            <value>
                <fullName>10	Aube</fullName>
            </value>
            <value>
                <fullName>11	Aude</fullName>
            </value>
            <value>
                <fullName>12	Aveyron</fullName>
            </value>
            <value>
                <fullName>13	Bouches-du-Rhône</fullName>
            </value>
            <value>
                <fullName>14	Calvados</fullName>
            </value>
            <value>
                <fullName>15	Cantal</fullName>
            </value>
            <value>
                <fullName>16	Charente</fullName>
            </value>
            <value>
                <fullName>17	Charente-Maritime</fullName>
            </value>
            <value>
                <fullName>18	Cher</fullName>
            </value>
            <value>
                <fullName>19	Corrèze</fullName>
            </value>
            <value>
                <fullName>21	Côte d&apos;Or</fullName>
            </value>
            <value>
                <fullName>22	Côtes d&apos;Armor</fullName>
            </value>
            <value>
                <fullName>23	Creuse</fullName>
            </value>
            <value>
                <fullName>24	Dordogne</fullName>
            </value>
            <value>
                <fullName>25	Doubs</fullName>
            </value>
            <value>
                <fullName>26	Drôme</fullName>
            </value>
            <value>
                <fullName>27	Eure</fullName>
            </value>
            <value>
                <fullName>28	Eure-et-Loir</fullName>
            </value>
            <value>
                <fullName>29	Finistère</fullName>
            </value>
            <value>
                <fullName>2A	Corse du Sud</fullName>
            </value>
            <value>
                <fullName>2B	Haute Corse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>