force-app/main/default/objects/Operation__c/fields/Departement_du_Pole__c.field-meta.xml
<CustomField>
    <fullName>Departement_du_Pole__c</fullName>
    <label>Département du Pôle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pole__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE-BI-Génie Energétique et Electrique</fullName>
            </value>
            <value>
                <fullName>ACE-BI-Management de Projets</fullName>
            </value>
            <value>
                <fullName>ACE-BI-Structures</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DEFENSE MANUFACTURING &amp; SUPPORT</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DEV &amp; OFFRES</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DEVELOPPEMENT DIGITAL</fullName>
            </value>
            <value>
                <fullName>ACE-EM-ENERGIES NOUVELLES</fullName>
            </value>
            <value>
                <fullName>ACE-EM-GENIE CIVIL</fullName>
            </value>
            <value>
                <fullName>ACE-EM-NUCLEAIRE CIVIL</fullName>
            </value>
            <value>
                <fullName>ACE-EM-SYSTEMES</fullName>
                <isActive>false</isActive>
                <label>ACE-EM-SYSTEMES</label>
            </value>
            <value>
                <fullName>ACE-IVM-Infrastructures</fullName>
            </value>
            <value>
                <fullName>ACE-IVM-Ouvrages d&apos;Art</fullName>
            </value>
            <value>
                <fullName>ACE-IVM-Transports</fullName>
            </value>
            <value>
                <fullName>ACE-IVM-Ville</fullName>
            </value>
            <value>
                <fullName>BAE-ARA-Arcora</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-BAE</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Conseil</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-CVCD</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Electricité</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Privé</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Public et BIM</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Santé/Recherche/Enseignement supérieur/Export</fullName>
            </value>
            <value>
                <fullName>BAE-BAE-Structure et VRD</fullName>
            </value>
            <value>
                <fullName>BAE-CIC-Cicad</fullName>
            </value>
            <value>
                <fullName>GEOS</fullName>
            </value>
            <value>
                <fullName>GWT-BTZ-Biarritz</fullName>
            </value>
            <value>
                <fullName>GWT-BX-Bordeaux</fullName>
            </value>
            <value>
                <fullName>GWT-BX-Ville et Mobilité</fullName>
            </value>
            <value>
                <fullName>GWT-NA-Nantes</fullName>
            </value>
            <value>
                <fullName>GWT-RE-Rennes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>