force-app/main/default/objects/Operation__c/fields/estDansMonDepartement__c.field-meta.xml
<CustomField>
    <fullName>estDansMonDepartement__c</fullName>
    <description>Champ masqué, vérifie si le département de l&apos;opération est le même que celui de l&apos;utilisateur</description>
    <formula>OR((TEXT( Departement_du_Pole__c )==TEXT( $User.Departement_du_Pole__c )),ISPICKVAL($User.Departement_du_Pole__c,&quot;&quot;))</formula>
    <label>estDansMonDepartement</label>
    <type>Checkbox</type>
</CustomField>