force-app/main/default/objects/Operation__c/fields/estDansMonPole__c.field-meta.xml
<CustomField>
    <fullName>estDansMonPole__c</fullName>
    <description>Champ masqué. Vérifie si le Pôle de l&apos;opération est le même que celui de l&apos;utilisateur</description>
    <formula>OR((TEXT(Pole__c) == TEXT( $User.Pole__c)),ISPICKVAL($User.Pole__c,&quot;&quot;))</formula>
    <label>estDansMonPole</label>
    <type>Checkbox</type>
</CustomField>