force-app/main/default/objects/Operation__c/fields/estDansMonService__c.field-meta.xml
<CustomField>
    <fullName>estDansMonService__c</fullName>
    <description>Champ masqué, vérifie si le service de l&apos;opération est le même que celui de l&apos;utilisateur</description>
    <formula>OR((TEXT( Service__c ) == TEXT( $User.Service__c )),ISPICKVAL($User.Service__c,&quot;&quot;))</formula>
    <label>estDansMonService</label>
    <type>Checkbox</type>
</CustomField>