force-app/main/default/objects/Operation__c/fields/estDansMonUFO__c.field-meta.xml
<CustomField>
    <fullName>estDansMonUFO__c</fullName>
    <description>Champ masqué utilisé pour les rapports uniquement. Vérifie si l&apos;UFO de l&apos;utilisateur est la même que celle de l&apos;opération</description>
    <formula>OR(( TEXT(UFO__c) ==  TEXT($User.UFO__c)),  ISPICKVAL($User.UFO__c,&quot;&quot;) )</formula>
    <label>estDansMonUFO</label>
    <type>Checkbox</type>
</CustomField>