force-app/main/default/objects/Operation__c/fields/Famille_d_ouvrage__c.field-meta.xml
<CustomField>
    <fullName>Famille_d_ouvrage__c</fullName>
    <label>Famille d&apos;ouvrage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activite__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aéronautique - Aéroportuaire</fullName>
            </value>
            <value>
                <fullName>Agroalimentaire</fullName>
            </value>
            <value>
                <fullName>Aménagement du Territoire</fullName>
            </value>
            <value>
                <fullName>Aménagements aeroportuaires</fullName>
            </value>
            <value>
                <fullName>Aménagements HYdrauliques</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Chimie, petrole, gaz</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Culturel</fullName>
            </value>
            <value>
                <fullName>DEChets</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>eau et INFrastructures</fullName>
            </value>
            <value>
                <fullName>eaux URBaines</fullName>
            </value>
            <value>
                <fullName>Electronique, hautes technologies</fullName>
            </value>
            <value>
                <fullName>Energie, environnement</fullName>
            </value>
            <value>
                <fullName>Enseignement</fullName>
            </value>
            <value>
                <fullName>Environnement INdustriel</fullName>
            </value>
            <value>
                <fullName>Equipements d&apos;Infrastructure</fullName>
            </value>
            <value>
                <fullName>Génie Urbain</fullName>
            </value>
            <value>
                <fullName>GEOtechnique</fullName>
            </value>
            <value>
                <fullName>hydraulique FLUviale</fullName>
            </value>
            <value>
                <fullName>Hydraulique - Qualité de l&apos;eau</fullName>
            </value>
            <value>
                <fullName>Industrie des metaux</fullName>
            </value>
            <value>
                <fullName>Logement</fullName>
            </value>
            <value>
                <fullName>Ouvrages d&apos;art et structures</fullName>
            </value>
            <value>
                <fullName>Ouvrages Hydrauliques</fullName>
            </value>
            <value>
                <fullName>Ouvrages souterrains</fullName>
            </value>
            <value>
                <fullName>Ouvrages spéciaux</fullName>
            </value>
            <value>
                <fullName>Pharmacie, biotechnologie, cosmetique</fullName>
            </value>
            <value>
                <fullName>Ports et littoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>