force-app/main/default/objects/Operation__c/fields/Id_BaseCom__c.field-meta.xml
<CustomField>
    <fullName>Id_BaseCom__c</fullName>
    <externalId>true</externalId>
    <label>Id BaseCom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>