force-app/main/default/objects/Operation__c/fields/Information_creer__c.field-meta.xml
<CustomField>
    <fullName>Information_creer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information créer</label>
    <type>Checkbox</type>
</CustomField>