force-app/main/default/objects/Operation__c/fields/link__c.field-meta.xml
<CustomField>
    <fullName>link__c</fullName>
    <formula>&quot;/lightning/r/Operation__c/&quot;+Id+&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>link</label>
    <type>Text</type>
</CustomField>