force-app/main/default/objects/Operation__c/fields/Nom_du_r_f_rent__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_r_f_rent__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du référent</label>
    <type>Text</type>
</CustomField>