force-app/main/default/objects/Operation__c/fields/Nombre_d_offres__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_offres__c</fullName>
    <description>Nombre d&apos;Offres issues des Équipes/Candidatures de l&apos;Opération</description>
    <label>Nombre d&apos;offres</label>
    <summarizedField>Equipe_Candidature__c.Nombre_d_offres__c</summarizedField>
    <summaryForeignKey>Equipe_Candidature__c.Operation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>