force-app/main/default/objects/Operation__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <label>Objet</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>