force-app/main/default/objects/Operation__c/fields/P_le_Vide__c.field-meta.xml
<CustomField>
    <fullName>P_le_Vide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pôle Vide</label>
    <type>Checkbox</type>
</CustomField>