force-app/main/default/objects/Operation__c/fields/Partage__c.field-meta.xml
<CustomField>
    <fullName>Partage__c</fullName>
    <formula>HYPERLINK(&quot;/p/share/CustomObjectSharingDetail?parentId=&quot; &amp;  Id , &quot;Lien vers le partage&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partage</label>
    <type>Text</type>
</CustomField>