force-app/main/default/objects/Operation__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Zone_geographique__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Afrique du sud</fullName>
            </value>
            <value>
                <fullName>Albanie</fullName>
            </value>
            <value>
                <fullName>Algérie</fullName>
            </value>
            <value>
                <fullName>Allemagne</fullName>
            </value>
            <value>
                <fullName>Andorre</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua et Barbuda</fullName>
            </value>
            <value>
                <fullName>Arabie saoudite</fullName>
            </value>
            <value>
                <fullName>Argentine</fullName>
            </value>
            <value>
                <fullName>Arménie</fullName>
            </value>
            <value>
                <fullName>Australie</fullName>
            </value>
            <value>
                <fullName>Autriche</fullName>
            </value>
            <value>
                <fullName>Azerbaïdjan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahreïn</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbade</fullName>
            </value>
            <value>
                <fullName>Belau</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Bénin</fullName>
            </value>
            <value>
                <fullName>Bhoutan</fullName>
            </value>
            <value>
                <fullName>Biélorussie</fullName>
            </value>
            <value>
                <fullName>Birmanie</fullName>
            </value>
            <value>
                <fullName>Bolivie</fullName>
            </value>
            <value>
                <fullName>Bosnie-Herzégovine</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Brésil</fullName>
            </value>
            <value>
                <fullName>Brunei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>