force-app/main/default/objects/Operation__c/fields/Phase_commerciale__c.field-meta.xml
<CustomField>
    <fullName>Phase_commerciale__c</fullName>
    <label>Phase commerciale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Candidature</fullName>
            </value>
            <value>
                <fullName>Offre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>