force-app/main/default/objects/Operation__c/fields/Pole__c.field-meta.xml
<CustomField>
    <fullName>Pole__c</fullName>
    <label>Pôle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UFO__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE-Bâtiment &amp; Industrie</fullName>
            </value>
            <value>
                <fullName>ACE-BU AMO</fullName>
                <isActive>false</isActive>
                <label>ACE-BU AMO</label>
            </value>
            <value>
                <fullName>ACE-BU Energie</fullName>
                <isActive>false</isActive>
                <label>ACE-BU Energie</label>
            </value>
            <value>
                <fullName>ACE-BU Génie Civil</fullName>
                <isActive>false</isActive>
                <label>ACE-BU Génie Civil</label>
            </value>
            <value>
                <fullName>ACE-BU Grands Projets</fullName>
                <isActive>false</isActive>
                <label>ACE-BU Grands Projets</label>
            </value>
            <value>
                <fullName>ACE-BU Nucléaire et Industrie</fullName>
                <isActive>false</isActive>
                <label>ACE-BU Nucléaire et Industrie</label>
            </value>
            <value>
                <fullName>ACE-BU Villes et Transports</fullName>
                <isActive>false</isActive>
                <label>ACE-BU Villes et Transports</label>
            </value>
            <value>
                <fullName>ACE-Energy &amp; Manufacturing 4.0</fullName>
            </value>
            <value>
                <fullName>ACE-Infrastructures Ville et Mobilité</fullName>
            </value>
            <value>
                <fullName>BAE-Arcora</fullName>
            </value>
            <value>
                <fullName>BAE-BAE</fullName>
            </value>
            <value>
                <fullName>BAE-Cicad</fullName>
            </value>
            <value>
                <fullName>GEOS</fullName>
            </value>
            <value>
                <fullName>GWT-Biarritz</fullName>
            </value>
            <value>
                <fullName>GWT-Bordeaux</fullName>
            </value>
            <value>
                <fullName>GWT-Nantes</fullName>
            </value>
            <value>
                <fullName>GWT-Rennes</fullName>
            </value>
            <value>
                <fullName>GWT-Toulouse</fullName>
            </value>
            <value>
                <fullName>ICO</fullName>
            </value>
            <value>
                <fullName>INT-Canada</fullName>
            </value>
            <value>
                <fullName>INT-Deutschland</fullName>
            </value>
            <value>
                <fullName>INT-East Africa</fullName>
            </value>
            <value>
                <fullName>INT-Geos Suisse</fullName>
            </value>
            <value>
                <fullName>INT-International</fullName>
            </value>
            <value>
                <fullName>INT-Rendel</fullName>
                <isActive>false</isActive>
                <label>INT-Rendel</label>
            </value>
            <value>
                <fullName>INT-South Africa</fullName>
            </value>
            <value>
                <fullName>INT-T3</fullName>
            </value>
            <value>
                <fullName>INT-West Africa</fullName>
            </value>
            <value>
                <fullName>IVT-AMO</fullName>
                <isActive>false</isActive>
                <label>IVT-AMO</label>
            </value>
            <value>
                <fullName>IVT-Infrastructures et Mobilités</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>