force-app/main/default/objects/Operation__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>Priorité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chaud</fullName>
            </value>
            <value>
                <fullName>Tiède</fullName>
            </value>
            <value>
                <fullName>Froid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>