force-app/main/default/objects/Operation__c/fields/Privee_public__c.field-meta.xml
<CustomField>
    <fullName>Privee_public__c</fullName>
    <label>Privée/Public</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Privée</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>