force-app/main/default/objects/Operation__c/fields/R_f_rent_homologue__c.field-meta.xml
<CustomField>
    <fullName>R_f_rent_homologue__c</fullName>
    <description>Champ utilisé dans les rapports.</description>
    <formula>IF($User.UserRoleId ==  Owner:User.UserRoleId, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Référent homologue</label>
    <type>Checkbox</type>
</CustomField>