force-app/main/default/objects/Operation__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Departement_du_Pole__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE-AMO-MDP-BAM Vienne</fullName>
                <isActive>false</isActive>
                <label>ACE-AMO-MDP-BAM Vienne</label>
            </value>
            <value>
                <fullName>ACE-BAT-BAT-Dir de Projet</fullName>
                <isActive>false</isActive>
                <label>ACE-BAT-BAT-Dir de Projet</label>
            </value>
            <value>
                <fullName>ACE-BI-GEE-Génie Electrique</fullName>
            </value>
            <value>
                <fullName>ACE-BI-GEE-Génie Energétique et Climatique</fullName>
            </value>
            <value>
                <fullName>ACE-BI-GEE-Ingefi</fullName>
            </value>
            <value>
                <fullName>ACE-BI-MP-Agroalimentaire</fullName>
            </value>
            <value>
                <fullName>ACE-BI-MP-AMO</fullName>
            </value>
            <value>
                <fullName>ACE-BI-MP-Clermont</fullName>
            </value>
            <value>
                <fullName>ACE-BI-MP-Vienne</fullName>
            </value>
            <value>
                <fullName>ACE-BI-S-Clermont</fullName>
            </value>
            <value>
                <fullName>ACE-BI-S-Vienne</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDD-DIGITAL</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDEV-DEV &amp; OFFRES</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDMS-BIM</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDMS-MAS</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDMS-MGT2</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DDMS-SCP</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DEN-DENO</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DGC-Génie Civil 1</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DGC-Génie Civil 2</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DGC-Génie Civil 3</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DGC-Génie Civil 4</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DNC-Conseils et Services</fullName>
            </value>
            <value>
                <fullName>ACE-EM-DNC-MGT1</fullName>
            </value>
            <value>
                <fullName>ACE-GC-GC-Clermont</fullName>
                <isActive>false</isActive>
                <label>ACE-GC-GC-Clermont</label>
            </value>
            <value>
                <fullName>ACE-GC-GC-Génie Civil Nucléaire</fullName>
                <isActive>false</isActive>
                <label>ACE-GC-GC-Génie Civil Nucléaire</label>
            </value>
            <value>
                <fullName>ACE-GC-GC-Intec Tunis</fullName>
                <isActive>false</isActive>
                <label>ACE-GC-GC-Intec Tunis</label>
            </value>
            <value>
                <fullName>ACE-GC-GC-Structure béton Clermont</fullName>
                <isActive>false</isActive>
                <label>ACE-GC-GC-Structure béton Clermont</label>
            </value>
            <value>
                <fullName>ACE-GP-GP-Grands projets</fullName>
                <isActive>false</isActive>
                <label>ACE-GP-GP-Grands projets</label>
            </value>
            <value>
                <fullName>ACE-IVM-INF-Annecy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>