force-app/main/default/objects/Operation__c/fields/Service_vide__c.field-meta.xml
<CustomField>
    <fullName>Service_vide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service vide</label>
    <type>Checkbox</type>
</CustomField>