force-app/main/default/objects/Operation__c/fields/Sous_activite__c.field-meta.xml
<CustomField>
    <fullName>Sous_activite__c</fullName>
    <label>Sous-activité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activite__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aéronautique - Transports</fullName>
            </value>
            <value>
                <fullName>Agroalimentaire</fullName>
            </value>
            <value>
                <fullName>Automobile - Industrie pneumatiques</fullName>
            </value>
            <value>
                <fullName>Bâtiments industriels et tertiaire</fullName>
            </value>
            <value>
                <fullName>Chimie</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>Energie Renouvelables -Environnement</fullName>
            </value>
            <value>
                <fullName>Energie thermique</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Informatique- Datas Centers  - Telecom</fullName>
            </value>
            <value>
                <fullName>Matériaux</fullName>
            </value>
            <value>
                <fullName>Métallurgie - Sidérurgie</fullName>
            </value>
            <value>
                <fullName>Nucléaire civil</fullName>
            </value>
            <value>
                <fullName>Energie Nucléaire - Défense</fullName>
            </value>
            <value>
                <fullName>Pharmacie - Cosméto</fullName>
            </value>
            <value>
                <fullName>Process et procédés</fullName>
            </value>
            <value>
                <fullName>Assainissement EU</fullName>
            </value>
            <value>
                <fullName>ATEX</fullName>
            </value>
            <value>
                <fullName>Environnement</fullName>
            </value>
            <value>
                <fullName>Hydrologie-hydraulique fluviale 1D</fullName>
            </value>
            <value>
                <fullName>Hydrologie-hydraulique fluviale 2D</fullName>
            </value>
            <value>
                <fullName>Hydrologie-hydraulique autres</fullName>
            </value>
            <value>
                <fullName>Hydrogéomorphologie</fullName>
            </value>
            <value>
                <fullName>Hydrologie-hydraulique routière</fullName>
            </value>
            <value>
                <fullName>Hydrologie-hydraulique urbaine</fullName>
            </value>
            <value>
                <fullName>ICPE</fullName>
            </value>
            <value>
                <fullName>MOE autres</fullName>
            </value>
            <value>
                <fullName>MOE hydraulique fluviale</fullName>
            </value>
            <value>
                <fullName>MOE hydraulique routière</fullName>
            </value>
            <value>
                <fullName>MOE réseaux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>